## Change history

### [2020/08/11]
* The DxfDocument class derives from DxfObject for convenience of this library not because of the DXF structure. It can contain external data XData information, but it will not saved in the DXF.
* (fixed) Table collection handles that are saved in the DXF OBJECTS section were not preserved.
* (fixed) The RasterVariables object didn't have an owner.

### [2020/08/10]
* All classes derived from DxfObject can contain XData (extended data).
	The TextStyles and ShapeStyles extended data information will be combined into the DXF STYLE table.
* Deleted the IHasXData interface, it is not needed anymore.
* The RasterVariables object is always saved, regardless if the document contains images or not.
* Removed the MaxCapacity limits from the TableObject collections, except for layouts that it is 256 = 255 (paper space) + 1 (model space) exceeding this limit may crash AutoCad.
	According to the AutoCad ActiveX documentation there is no limit, therefore the DXF code 70 maximum number of entries in table is obsolete, it represents a 16-bit integer value. 
* Removed the MaxCapacity property from the TableObject collections.

### [2020/08/04]
* Renamed DxfObjectCode.LightWeightPolyline to DxfObjectCode.LwPolyline.
* Renamed SubclassMarker.LightWeightPolyline to SubclassMarker.LwPolyline.
* Force the use of the ASCII.WindowsCodePage encoding in the DxfReader class, just for cases where there was a problem reading the codepage from the file.
* (fixed) Index to RGB color equivalent in the AciColor class.
* (fixed) The FrozenLayers list of the Viewport entity cannot contain null items or layers that belong to different documents.
* (fixed) When an open LwPolyline is converted to a set of vertexes (PolygonalVertexes method) the last vertex will not be welded to the first if they fall inside the defined threshold.

### [2020/03/01]